Se agrega el resto de las funcionalidades
